tdf#158593 Make configmgr READONLY Property more useful

...to reflect whether or not the corresponding item can be modified.  Which
matches what the READONLY flag is actually used for today.  (And the original,
somewhat arbitrary semantics had been assigned without much thought, IIRC, and
it should be OK to change them.)

Change-Id: I8185e47519a5cb4aff6e8f260326845276b0c092
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160957
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <stephan.bergmann@allotropia.de>
(cherry picked from commit f8199c424412f56edb1c64fada27e0c94d34fe79)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160938